--- a/nginx.conf
+++ b/nginx.conf
@@ -17,4 +17,8 @@ server {
   location / {
     try_files $uri $uri/ /index.html =404;
   }
+  
+  location /api {
+	proxy_pass http://45.67.221.242:8082/;
+  }
 }
