--- a/nginx.conf
+++ b/nginx.conf
@@ -16,9 +16,18 @@ server {
 
   location / {
     try_files $uri $uri/ /index.html =404;
+	proxy_http_version 1.1;
+	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+	proxy_set_header X-Forwarded-Proto $scheme;
+	proxy_set_header X-Forwarded-Port $server_port;
   }
   
   location /api {
 	proxy_pass http://45.67.221.242:8082/;
+	proxy_http_version 1.1;         
+	proxy_set_header Upgrade $http_upgrade;                 
+	proxy_set_header Connection 'upgrade';                 
+	proxy_set_header Host $host;                 
+	proxy_cache_bypass $http_upgrade;   
   }
 }
