--- a/nginx.conf
+++ b/nginx.conf
@@ -22,7 +22,7 @@ server {
 	proxy_set_header X-Forwarded-Port $server_port;
   }
   
-  location ^~ /api/ {
+  location /api {
 	proxy_pass http://45.67.221.242:8082/;
 	proxy_http_version 1.1;         
 	proxy_set_header Upgrade $http_upgrade;                 
