--- a/nginx.conf
+++ b/nginx.conf
@@ -18,12 +18,7 @@ server {
     try_files $uri $uri/ /index.html =404;
   }
   
-  location /api/ {
-	proxy_pass http://45.67.221.242:8082/;
-	proxy_http_version 1.1;         
-	proxy_set_header Upgrade $http_upgrade;                 
-	proxy_set_header Connection 'upgrade';                 
-	proxy_set_header Host $host;                 
-	proxy_cache_bypass $http_upgrade;
+  location ^~ /api/ {
+    proxy_pass http://45.67.221.242:8082;
   }
 }
