ajuste no proxy

--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,7 @@ server {
     try_files $uri $uri/ /index.html;
   }
   
-  location ^~ /api/ {
+  location /api/ {
     proxy_pass http://45.67.221.242:8082;
   }
 }
