--- a/nginx.conf
+++ b/nginx.conf
@@ -15,10 +15,12 @@ server {
   root /usr/share/nginx/html;
 
   location / {
+	root html;
+	index index.html index.htm
     try_files $uri $uri/ /index.html;
   }
   
   location /api/ {
-    proxy_pass http://45.67.221.242:8082;
+	proxy_pass http://45.67.221.242:8082/
   }
 }
