--- a/nginx.conf
+++ b/nginx.conf
@@ -21,6 +21,10 @@ server {
   }
   
   location /api/ {
-	proxy_pass http://45.67.221.242:8082/
+	  proxy_pass http://45.67.221.242:8082/;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
   }
 }
