--- a/nginx.conf
+++ b/nginx.conf
@@ -1,30 +1,37 @@
-server {
-  listen 80;
-  sendfile on;
-  default_type application/octet-stream;
+events {
+  worker_connections  4096;  ## Default: 1024
+}
 
-  gzip on;
-  gzip_http_version 1.1;
-  gzip_disable      "MSIE [1-6]\.";
-  gzip_min_length   256;
-  gzip_vary         on;
-  gzip_proxied      expired no-cache no-store private auth;
-  gzip_types        text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-  gzip_comp_level   9;
+http {
+  include       mime.types;
+	default_type  application/octet-stream;
+	client_max_body_size 32m;
+	client_body_buffer_size 16k;
+  sendfile        on;
+  keepalive_timeout  165;
 
-  root /usr/share/nginx/html;
+  server {
+    listen 86;
+    sendfile on;
 
-  location / {
-	root html;
-	index index.html index.htm
-    try_files $uri $uri/ /index.html;
-  }
-  
-  location /api/ {
-	  proxy_pass http://45.67.221.242:8082/;
-    proxy_set_header Host $http_host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
+    gzip on;
+    gzip_http_version 1.1;
+    gzip_disable      "MSIE [1-6]\.";
+    gzip_min_length   256;
+    gzip_vary         on;
+    gzip_proxied      expired no-cache no-store private auth;
+    gzip_types        text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_comp_level   9;
+
+    root html;
+
+    location / {
+      try_files $uri $uri/ /index.html;
+    }
+
+    location /api {
+      proxy_pass http://45.67.221.242:8092;
+      proxy_set_header Host $host;
+    }
   }
 }
