--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,7 @@ server {
     root html;
 
     location / {
-      try_files $uri $uri/ /index.html;
+      try_files $uri $uri/ /index.html =404;
     }
 
     location ^~ /api/ {
