--- a/nginx.conf
+++ b/nginx.conf
@@ -17,7 +17,7 @@ server {
       try_files $uri $uri/ /index.html =404;
     }
 
-    location ^~ /api/ {
+    location /api/ {
       proxy_set_header Host $host;
       proxy_pass http://45.67.221.242:8092;
     }
