--- a/nginx.conf
+++ b/nginx.conf
@@ -17,8 +17,8 @@ server {
       try_files $uri $uri/ /index.html =404;
     }
 
-    location /api/ {
-      proxy_set_header Host $host;
+    location ^~ /api/ {
       proxy_pass http://45.67.221.242:8092;
+	  proxy_set_header Host $host;
     }
   }
