--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen 0.0.0.0:80;
+    listen 80;
     sendfile on;
 
     gzip on;
@@ -11,7 +11,7 @@ server {
     gzip_types        text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
     gzip_comp_level   9;
 
-    root html;
+    root /usr/share/nginx/html;
 
     location / {
       try_files $uri $uri/ /index.html =404;
@@ -19,6 +19,6 @@ server {
 
     location /api/ {
       proxy_pass http://45.67.221.242:8082;
-	  proxy_set_header Host $host;
+	    proxy_set_header Host $host;
     }
   }
